<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"

            android:layout_marginTop="100dp">
            <TextView
                    style="@style/StyleTextViewMiddle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/path_for_records"
                    android:layout_marginBottom="15dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextPath"
                android:layout_marginBottom="@dimen/size_help">

            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <Button
                            style="@style/StyleButtonIconBig2"
                            android:background="@drawable/auto"
                            android:layout_centerHorizontal="true"
                            android:onClick="onClickButtonAuto"/>

                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            style="@style/StyleTextViewSmall"
                            android:text="@string/findAuto"
                            android:layout_centerHorizontal="true">
                        </TextView>

                    </RelativeLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <Button
                            style="@style/StyleButtonIconBig2"
                            android:background="@drawable/hand"
                            android:layout_centerHorizontal="true"
                            android:onClick="onClickButtonHand"/>

                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            style="@style/StyleTextViewSmall"
                            android:text="@string/selectHand"
                            android:layout_centerHorizontal="true">
                        </TextView>

                    </RelativeLayout>
                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    style="@style/ButtonStyle.LongBlue"
                    android:text="@string/save_rus"
                    android:layout_margin="@dimen/standard"
                    android:layout_centerInParent="true"
                    android:onClick="onClickButtonSaveSettings"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    style="@style/ButtonStyle.LongBlue"
                    android:text="@string/cancel_rus"
                    android:layout_margin="@dimen/standard"
                    android:onClick="onClickCancelSaveSettings"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>