<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools">
    <!-- Name selected contact -->
    <TextView
        style="@style/TextViewStyle.Big"
        android:id="@+id/textViewSelectedContactPortrait"
        android:gravity="center_horizontal"
        android:layout_marginVertical="@dimen/standard"
        >
    </TextView>

    <!-- psychological portrait -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:orientation="horizontal"
        android:layout_margin="@dimen/standard">
        <ImageView
            android:layout_margin="@dimen/standard"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:background="@drawable/agent"
            android:id="@+id/imageViewPortrait"/>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50">
            <TextView
                style="@style/TextViewStyle.Big"
                android:id="@+id/textViewHeaderPortrait"
                android:layout_centerInParent="true"
                android:textAlignment="center"
                android:text="Не определено"
                android:gravity="center_horizontal" />
        </RelativeLayout>
    </LinearLayout>

    <!-- edit text for portrait -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="70"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/linerLayoutTextForPortrait">
            <EditText
                android:id="@+id/editTextForPortrait"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="80"
                android:layout_marginHorizontal="@dimen/more_margin"
                android:background="@drawable/border_line"
                android:inputType="textMultiLine"
                android:gravity="top|left"
                tools:ignore="RtlHardcoded"
                android:enabled="false"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20">
                <Button
                    style="@style/ButtonStyle.SmallBlue"
                    android:layout_margin="20dp"
                    android:text="@string/edit_rus"
                    android:id="@+id/buttonEditTextForPortrait"
                    android:onClick="onClickButtonEditForPortrait"/>
                <Button
                    style="@style/ButtonStyle.SmallBlue"
                    android:layout_alignParentRight="true"
                    android:layout_margin="20dp"
                    android:text="@string/copy_rus"
                    android:onClick="onClickButtonCopyForPortrait"/>
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/relativeLayoutGetPortrait">
            <Button
                style="@style/ButtonStyle.LongBlue"
                android:layout_centerInParent="true"
                android:onClick="onClickButtonGetPortrait"
                android:text="@string/get_portrait_button_rus"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>